# digital-filters

./: .gitignore  LICENSE  README.md
fir_filter/: CMakeLists.txt  Makefile  main.cpp
fir_filter/src/: FIRFilter.cpp  FIRFilter.hpp
iir_filter/: CMakeLists.txt  main.cpp
iir_filter/src/: IIRFilter.cpp  IIRFilter.hpp
kalman_filter/: CMakeLists.txt  main.cpp
kalman_filter/src/: KalmanFilter.cpp  KalmanFilter.hpp
test/: plot_output.py
